testing/framework/resources/Advanced/Failing/mondrian/query2519.q
selectn    *nfromn    (selectn    product_class.product_family as c0nfromn    product as product,n    product_class as product_class,n    sales_fact_1997 as sales_fact_1997,n    store as storenwheren    product.product_class_id = product_class.product_class_idnandn    sales_fact_1997.product_id = product.product_idnandn    sales_fact_1997.store_id = store.store_idnandn    store.store_country = 'USA'ngroup byn    product_class.product_familynunionnselectn    product_class.product_family as c0nfromn    product as product,n    product_class as product_class,n    inventory_fact_1997 as inventory_fact_1997,n    store as storenwheren    product.product_class_id = product_class.product_class_idnandn    inventory_fact_1997.product_id = product.product_idnandn    inventory_fact_1997.store_id = store.store_idnandn    store.store_country = 'USA'ngroup byn    product_class.product_family) as unionQuerynorder byn    1 ASC NULLS LAST;
